--- a/antora.yaml
+++ b/antora.yaml
@@ -1,5 +1,5 @@
-name: component-a
-title: Component A
+name: service-mesh-lab
+title: Service Mesh Lab
 version: 1.0.0
 start_page: ROOT:intro.adoc
 nav:
