--- a/antora-playbook.yaml
+++ b/antora-playbook.yaml
@@ -7,5 +7,5 @@ content:
     branches: main
 ui:
   bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
+    url: https://github.com/atarazana/atarazana-ui-default/releases/download/v0.1.0/ui-bundle.zip
     snapshot: true
