--- a/antora-playbook-local.yaml
+++ b/antora-playbook-local.yaml
@@ -7,7 +7,10 @@ content:
     branches: main
 asciidoc:
   attributes:
-    username: user45
+    username: user1
+    password: openshift
+    cluster_subdomain: apps.9898.opentlc.com
+    
 ui:
   bundle:
     url: /Users/cvicensa/Projects/antora/atarazana-ui-default/build/ui-bundle.zip
