translating to adoc

--- a/antora-playbook.yaml
+++ b/antora-playbook.yaml
@@ -1,10 +1,17 @@
 site:
   title: Service Mesh Lab
   start_page: service-mesh-lab::intro.adoc
+  
 content:
   sources:
   - url: https://github.com/cvicens/service-mesh-lab.git
     branches: main
+
+asciidoc:
+  attributes:
+    username: user1
+    password: openshift
+    cluster_subdomain: apps.9898.opentlc.com
 ui:
   bundle:
     url: https://github.com/atarazana/atarazana-ui-default/releases/download/v0.1.0/ui-bundle.zip
